objects/TIMBASURVEYS__SurveyQuestion__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__AllowActiveBranching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowActiveBranching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Columns__c</fullName>
        <label>Columns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__HasChild__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasChild</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__PageNumber__c</fullName>
        <label>PageNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentId</label>
        <referenceTo>TIMBASURVEYS__SurveyQuestion__c</referenceTo>
        <relationshipLabel>SurveyQuestions</relationshipLabel>
        <relationshipName>SurveyQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Question2__c</fullName>
        <label>Question2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__QuestionComment__c</fullName>
        <label>QuestionComment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__QuestionTypeCode__c</fullName>
        <label>QuestionTypeCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__QuestionType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuestionType</label>
        <referenceTo>TIMBASURVEYS__QuestionType__c</referenceTo>
        <relationshipLabel>SurveyQuestions</relationshipLabel>
        <relationshipName>SurveyQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Question_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Image</label>
        <referenceTo>TIMBASURVEYS__Question_Image__c</referenceTo>
        <relationshipLabel>SurveyQuestions</relationshipLabel>
        <relationshipName>SurveyQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RichTextEditorEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RichTextEditorEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RowPlacement__c</fullName>
        <label>RowPlacement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyPage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyPage</label>
        <referenceTo>TIMBASURVEYS__SurveyPage__c</referenceTo>
        <relationshipLabel>SurveyQuestions</relationshipLabel>
        <relationshipName>SurveyQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>SurveyQuestions</relationshipLabel>
        <relationshipName>SurveyQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__TextLength__c</fullName>
        <label>TextLength</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__ToolTip__c</fullName>
        <description>The tooltip than show when the mouse is over the title of a question</description>
        <label>ToolTip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__isWeightManaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isWeightManaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__x__c</fullName>
        <label>x</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__y__c</fullName>
        <label>y</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SurveyQuestion</label>
    <nameField>
        <label>SurveyQuestion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyQuestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>